--- a/src/components/Projects/MyWork/Work1/Work1.css
+++ b/src/components/Projects/MyWork/Work1/Work1.css
@@ -7,7 +7,8 @@
     margin: 30px 0 15px;
     padding: 40px 60px;
     margin: 40px;
-    height: 420px;
+    background-color: #81B29A;
+    text-align: center;
 }
 
 /* Title Styling */
@@ -36,14 +37,14 @@
 }
 
 .work-picture:hover {
-    transform: scale(1.05);
+    transform: scale(1.2);
     opacity: 0.85;
 }
 
 /* Details Styling */
 .work-details {
     margin-top: 20px;
-    background-color: #dde5ee;
+    background-color: #E07A5F;
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
@@ -62,6 +63,7 @@
 .work-text {
     margin-bottom: 15px;
     line-height: 1.5;
+    
 }
 
 .Technologies-List {
@@ -70,12 +72,12 @@
     flex-wrap: wrap;
 }
 .Technologies-Appearance {
-    background-color: #F4F1DE;
+    background-color: #dde5ee;
     border-style: solid;
     border-width: 2px;
     border-radius: 40px;
     margin-top: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
     margin-left: 5px;
     margin-right: 5px;
     padding-top: 5px;
@@ -84,18 +86,22 @@
     padding-right: 5px;
 }
 
-/*! UNIVERSAL CODE for WORK 1-3 ---------- END */
-
-
 
 @media (max-width: 1395px) {
     .work-container {
-        padding: 40px 30px;
-        height: 420px;
+        height: auto;
+        padding: auto;
+        text-align: center;
     }
     @media (max-width: 830px) {
         .work-container {
-            height: 420px;
+            height: auto;
+            padding: auto;
+            text-align: center;
         }
     }
 }
+
+
+
+/*! UNIVERSAL CODE for WORK 1-3 ---------- END */
